--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -52,6 +52,30 @@ dependencyResolutionManagement {
       from(files(new File(["node", "--print", "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), "../gradle/libs.versions.toml")))
     }
   }
+
+//*************Zytrust*********************
+  repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+  repositories {
+    google()
+    mavenCentral()
+    maven {
+      url "https://maven.regulaforensics.com/RegulaDocumentReader"
+    }
+
+    maven {
+      url "https://repo.zytrust.com/artifactory/zy-mobile-maven"
+    }
+
+    maven {
+      url "https://identy.jfrog.io/identy/identy-face-release"
+      credentials {
+        username = "zytrust"
+        password = "yK54WHqgel8PztBHwXZn7"
+      }
+    }
+  }
+
+  //**********End Zytrust************
 }
 
 apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
