--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
+    "react-native-zyprotectabio-module": "^0.1.11",
     "react-navigation": "5.0.0",
     "react-navigation-redux-helpers": "4.0.1",
     "react-redux": "9.1.2",
     "redux": "5.0.1",
     "redux-persist": "6.0.0",
     "redux-thunk": "3.1.0",
+    "typescript": "~5.3.3",
     "yup": "1.4.0"
   },
   "devDependencies": {
